# max-benchmark

./: .gitignore  README.md  pyproject.toml
notebooks/: plot.ipynb
src/max_benchmark/: __init__.py
src/max_benchmark/models/: __init__.py  timm.py  torchvision.py  ultralytics.py
