[project]
name = "max-benchmark"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryosuke Kamesawa", email = "emak.ryo@gmail.com" }
]
dependencies = [
    "max-engine>=24.4.0",
    "torch==2.2.2",
    "transformers==4.40.1",
    "numpy<2.0",
    "torchvision==0.17.2",
    "onnxruntime>=1.18.1",
    "onnx>=1.16.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "modular"
url = "file:///Users/ryosuke.kamesawa/.modular/pkg/packages.modular.com_max/wheels"
type = "find-links"

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/max_benchmark"]
